Add articles to politics center

--- a/politics/index.html
+++ b/politics/index.html
@@ -5,11 +5,24 @@
 <body>
 	
 	<nav>
-		<a href="https://awaffle1.github.io/ththi-times-web"><img src="../images/logo.png" height="200" width="250"></a>
+		<a href="../index.html"><img src="../images/logo.png" height="200" width="250"></a>
+		<link rel="stylesheet" href="../styles/main.css">
 		<h2>Your center for Kalranian propaganda</h2>
 		<hr>
 	</nav>
 	
-	<center><h1>Welcome to Politics Central</h1></center>
+	<center><h1><span class="politics">Welcome to Politics Central</span></h1></center>
+	<div class="the_isolationist.1"><a href="articles/101319_01.html"><h3>-------- The Isolationist</h3>
+	<p>October 13th 2019 - Doge Land</p></a></div>
+	
+	<hr>
+	
+	<div class="kf_food_shortage.1"><a href="articles/101319_02.html"><h3>-------- Kaisar Federalist Food Shortage</h3>
+	<p>October 13th 2019 - Doge Land</p></a></div>
+	
+	<hr>
+	
+	<div class="cvc_battle_to_death.1"><a href="articles/101319_03.html"><h3>-------- City-state vs city-state in a battle to the death</h3>
+	<p>October 13th 2019 - Doge Land</p></a></div>
 </body>
 </html>
