--- a/index.html
+++ b/index.html
@@ -5,16 +5,44 @@
 <body>
 	
 	<nav>
-		<marquee>Latest Articles: |T| Hot Topic: |T| Latest Issue: <a href="https://www.nationstates.net/page=dispatch/id=1269641">Issue I - October 13th 2019</a></marquee>
 		<a href="index.html"><img src="images/logo.png" height="200" width="250"></a>
+		<link rel="stylesheet" href="styles/main.css">
 		<h2>Your center for Kalranian propaganda</h2>
 		<hr>
 	</nav>
 	
-	<h4>-------- New in Politics</h4>
+	<em><a href="issues.html">All Issues</a></em>
 	
-	<a href="politics/index.html">All Politics Articles</a>
+	<h4>-------- New in <span class="politics">Politics</span></h4>
 	
-	<h4>-------- New in Technology</h4>
+	<div class="the_isolationist.1"><a href="politics/articles/101319_01.html"><h3>The Isolationist</h3>
+	<p>October 13th 2019 - Doge Land</p></a></div>
+	
+	<hr>
+	
+	<div class="kf_food_shortage.1"><a href="politics/articles/101319_02.html"><h3>Kaisar Federalist Food Shortage</h3>
+	<p>October 13th 2019 - Doge Land</p></a></div>
+	
+	<hr>
+	
+	<div class="cvc_battle_to_death.1"><a href="politics/articles/101319_03.html"><h3>City-state vs city-state in a battle to the death</h3>
+	<p>October 13th 2019 - Doge Land</p></a></div>
+	
+	<hr>
+	
+	<a href="politics/index.html">All <span class="politics">Politics</span> Articles</a>
+	
+	<hr>
+	
+	<h4>-------- New in <span class="technology">Technology</span></h4>
+	
+	<div class="spacebasedtransport.1"><a href="technology/articles/101319_04.html"><h3>-------- A New Way of Space Based Transport?</h3>
+	<p>October 13th 2019 - Dushkaria, Edited by Doge Land</p></a></div>
+	
+	<hr>
+	
+	<a href="technology/index.html">All <span class="technology">Technology</span> Articles</a>
+	
+	<hr>
 </body>
 </html>
