--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	
 	<h4>-------- New in <span class="technology">Technology</span></h4>
 	
-	<div class="spacebasedtransport.1"><a href="technology/articles/101319_04.html"><h3>-------- A New Way of Space Based Transport?</h3>
+	<div class="spacebasedtransport.1"><a href="technology/articles/101319_04.html"><h3>A New Way of Space Based Transport?</h3>
 	<p>October 13th 2019 - Dushkaria, Edited by Doge Land</p></a></div>
 	
 	<hr>
