last issues update for a while

--- a/issues.html
+++ b/issues.html
@@ -12,6 +12,7 @@
 	</nav>
 	
 	<a class="reg_issue" id="issue1_list" href="https://www.nationstates.net/page=dispatch/id=1269641">Issue I - October 13th 2019 - 4 Articles</a>
-	
+	Issues are done, sadly :(
+	Articles will continue to be published.
 </body>
 </html>
