Add new article to politics

--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
 		<hr>
 	</nav>
 	
-	<em><a href="issues.html">All Issues</a></em>
-	
 	<h4>-------- New in <span class="politics">Politics</span></h4>
+	
+	<div class="cult_of_esper.1"><a href="politics/articles/102019_01.html"><h3>Cult of Esper</h3>
+	<p>October 20th 2019 - Doge Land</p></a></div>
+	
+	<hr>
 	
 	<div class="the_isolationist.1"><a href="politics/articles/101319_01.html"><h3>The Isolationist</h3>
 	<p>October 13th 2019 - Doge Land</p></a></div>
