--- a/politics/index.html
+++ b/politics/index.html
@@ -12,6 +12,11 @@
 	</nav>
 	
 	<center><h1><span class="politics">Welcome to Politics Central</span></h1></center>
+	<div class="rekken_civil_war.1"><a href="articles/102619_01.html"><h3>-------- Rekken Civil War</h3>
+	<p>October 26th 2019 - Doge Land</p></a></div>
+	
+	<hr>
+	
 	<div class="cult_of_esper.1"><a href="articles/102019_01.html"><h3>-------- Cult of Esper</h3>
 	<p>October 20th 2019 - Doge Land</p></a></div>
 	
