Add new article

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 	
 	<h4>-------- New in <span class="politics">Politics</span></h4>
 	
+	<div class="rekken_civil_war.1"><a href="politics/articles/102619_01.html"><h3>Rekken Civil War</h3>
+	<p>October 26th 2019 - Doge Land</p></a></div>
+	
+	<hr>
+	
 	<div class="cult_of_esper.1"><a href="politics/articles/102019_01.html"><h3>Cult of Esper</h3>
 	<p>October 20th 2019 - Doge Land</p></a></div>
 	
